--- a/index.html
+++ b/index.html
@@ -1,13 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pet Store</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/styles.css">
+				<meta charset="UTF-8">
+				<meta name="viewport" content="width=device-width, initial-scale=1.0">
+				<title>Pet Store</title>
+				<link rel="stylesheet" href="css/bootstrap.min.css">
+				<link rel="stylesheet" href="css/styles.css">
+
+				<!-- Font -->
+				<link rel="stylesheet" href="css/font-awesome.min.css">
+				<link href="https://fonts.googleapis.com/css?family=Lato:300,400|Satisfy" rel="stylesheet">
 </head>
 <body>
+				<div class="container">
+	 							<div class="row">
+		 										<div class="col-md-12">
+			 													<a href="index.html">
+			 																	<img src="img/petstore_logo.png" alt="logo" class="logo">
+																				<h3 class="logo-text">Pet Store</h3>
+															  </a>
+			 													<ul class="nav nav-pills pull-right">
+	  															<li role="presentation" class="active"><a href="#">Home</a></li>
+	  															<li role="presentation"><a href="#">Products</a></li>
+	  															<li role="presentation"><a href="#">Contact Us</a></li>
+																</ul>
+												</div>
+								</div>
+				</div>
+				<!-- END NAV BAR -->
+
+  			<div class="jumbotron">
+								<div class="container text-center text-uppercase">
+  											<h2>The Products They Love. Prices That You Like.</h2>
+  							</div>
+  			</div>
+				<!-- END JUMBOTRON -->
+
+				<div class="container">
+								<div class="row">
+												<div class="col-md-7 featured text-justify">
+																<!--FEATURED-->
+																<div class="row">
+																				<h2 class="text-uppercase">featured</h2>
+																				<P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia libero modi facere atque earum sapiente consequatur odio quo, consectetur, ipsam harum molestiae quibusdam magni in eligendi ex illum aut. Odit?</P>
+																</div>
+																<div class="row">
+																				<div class="col-md-4">
+																								<div class="thumbnail">
+																												<img src="img/product1.jpg" alt="dog bowl">
+																												<h4>Dog Bowl</h4>
+																												<p>The best dog bowl for your dog.</p>
+																												<button class="btn btn-info btn-xs center-block">Purchase Now</button>
+																								</div>
+																</div>
+																<div class="col-md-4">
+																				<div class="thumbnail">
+																								<img src="img/product2.jpg" alt="cat toy">
+																								<h4>Cat Toy</h4>
+																								<p>The best cat toy for your cat.</p>
+																								<button>class="btn btn-info btn-xs center-block">Purchase Now</button>
+	   																		</div>
+																</div>
+																<div class="col-md-4">
+																				<div class="thumbnail">
+																								<img src="img/product3.jpg" alt="parrot stuff">
+																								<h4>Parrot Stuff</h4>
+																								<p>The best parrot stuff for your parrot.</p>
+																								<button class="btn btn-info btn-xs center-block">Purchase Now</button>
+																				</div>
+																</div>
+																</div>
+												</div>
+		 										<!--END FEATURED-->
+
+		 										<div class="col-md-3 col-md-offset-2">
+		   													<!--SERVICES-->
+			 													<div class="row">
+																			 	<h2 class="">text-center text-uppercase">services</h2>
+			 													</div>
+			 													<div class="row">
+																	      <ul class="nav nav-pills nav-stacked text-center">
+																							<li>
+																										<a href="#" class="text-uppercase">adopt a cat</a>
+																										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+																							</li>
+																							<li>
+																										<a href="#" class="text-uppercase">adopt a dog</a>
+																										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+																							</li>
+																							<li>
+																										<a href="#" class="text-uppercase">adopt a fish</a>
+																										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+																							</li>
+																				</ul>
+																</div>
+												</div>
+												<!-- END SERVICES -->
+								</div>
+				</div>
+				<!-- END FEATURED/SERVICES -->
+
+			 <footer class="container-fluid">
+				 			 <div class="row">
+				 							 <div class="col-md-4">
+					 										 <img class="logo" src="img/petstore_logo.png" alt="logo">
+				 							 </div>
+				 							 <div class="col-md-4">
+					 										 <address>
+						 													 <a href="#">
+						 																	 Pet Store <br>
+																							 Fresno, Ca
+						 													 </a>
+																			 <br>
+																			 <a href="#">
+																				       info@petstore.com
+																			 </a>
+					 											</adrdress>
+												</div>
+					 <div class="col-md-4">
+					 				 <a href="#">
+													 <i class="fa fa-twitter"></i>
+													 <span>Twitter</span>
+					 				 </a>
+									 <br>
+									 <a href="#">
+										 			 <i class="fa fa-facebook"></i>
+													 <span>Facebook</span>
+									 </a>
+									 <br>
+									 <a href="#">
+										 			 <i class="fa fa-linkedin"></i>
+													 <span>LinkedIn</span>
+									 </a>
+					  </div>
+					</div>
+					<div class="row">
+									<p class="text-center">&copy; Pet Store, Inc. All rights reserved.</p>
+					</div>
+					<a href="#bfcoc1">
+					<p class="footer copyright">#505050</p>
+					</a>
+	</footer>
+
+
 
 	<!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
