fixed all the broken elements

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			 													<ul class="nav nav-pills pull-right">
 	  															<li role="presentation" class="active"><a href="#">Home</a></li>
 	  															<li role="presentation"><a href="#">Products</a></li>
-	  															<li role="presentation"><a href="#">Contact Us</a></li>
+	  															<li role="presentation"><a href="contact.html">Contact Us</a></li>
 																</ul>
 												</div>
 								</div>
@@ -58,7 +58,7 @@
 																								<img src="img/product2.jpg" alt="cat toy">
 																								<h4>Cat Toy</h4>
 																								<p>The best cat toy for your cat.</p>
-																								<button>class="btn btn-info btn-xs center-block">Purchase Now</button>
+																								<button class="btn btn-info btn-xs center-block">Purchase Now</button>
 	   																		</div>
 																</div>
 																<div class="col-md-4">
@@ -76,7 +76,7 @@
 		 										<div class="col-md-3 col-md-offset-2">
 		   													<!--SERVICES-->
 			 													<div class="row">
-																			 	<h2 class="">text-center text-uppercase">services</h2>
+																			 	<h2 class="text-center text-uppercase">services</h2>
 			 													</div>
 			 													<div class="row">
 																	      <ul class="nav nav-pills nav-stacked text-center">
@@ -102,21 +102,21 @@
 
 			 <footer class="container-fluid">
 				 			 <div class="row">
-				 							 <div class="col-md-4">
-					 										 <img class="logo" src="img/petstore_logo.png" alt="logo">
-				 							 </div>
-				 							 <div class="col-md-4">
-					 										 <address>
-						 													 <a href="#">
-						 																	 Pet Store <br>
-																							 Fresno, Ca
-						 													 </a>
-																			 <br>
-																			 <a href="#">
-																				       info@petstore.com
-																			 </a>
-					 											</adrdress>
-												</div>
+	 							 <div class="col-md-4">
+		 										 <img class="logo center-block" src="img/petstore_logo.png" alt="logo">
+	 							 </div>
+	 							 <div class="col-md-4">
+										 <address>
+ 													 <a href="#">
+ 																	 Pet Store <br>
+																	 Fresno, Ca
+ 													 </a>
+													 <br>
+													 <a href="#">
+														       info@petstore.com
+													 </a>
+											</address>
+									</div>
 					 <div class="col-md-4">
 					 				 <a href="#">
 													 <i class="fa fa-twitter"></i>
@@ -137,9 +137,6 @@
 					<div class="row">
 									<p class="text-center">&copy; Pet Store, Inc. All rights reserved.</p>
 					</div>
-					<a href="#bfcoc1">
-					<p class="footer copyright">#505050</p>
-					</a>
 	</footer>
 
 
